# zero

./: CMakeLists.txt
client/: CMakeLists.txt  client.c
include/: person.h
server/: CMakeLists.txt  server.c
